# dl-llm-majors

./: .gitignore  1_building_blocks.ipynb  2_your_first_model.ipynb  3_learning_patterns_cnn.ipynb  4_going_deeper_resnet.ipynb  5_from_pixels_to_prose.ipynb  6_the_main_event_gpt.ipynb  README.md  ignore.md  pyproject.toml
