[project]
name = "dl-llm-majors"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.0.1",
    "bitsandbytes>=0.45.5",
    "datasets>=3.1.0",
    "einops>=0.8.1",
    "huggingface-hub>=0.36.2",
    "jupyterlab>=4.3.8",
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "peft>=0.13.2",
    "scipy>=1.10.1",
    "sentencepiece>=0.2.1",
    "tensorboard>=2.20.0",
    "torch>=2.5.1",
    "tqdm>=4.67.3",
    "transformers>=4.46.3",
    "unsloth>=2026.1.4",
]
